FindBugs Patches for ODE Runtime (thanks to David Carver)
git-svn-id: https://svn.apache.org/repos/asf/ode/trunk@942159 13f79535-47bb-0310-9956-ffa450edef68